syntax = "proto3";

package messagebroker;

service MessageBroker {
  rpc RegisterClient(RegisterRequest) returns (RegisterResponse);
  
  rpc SendMessage(MessageRequest) returns (MessageResponse);
  
  rpc ReceiveMessages(ReceiveRequest) returns (stream Message);
  
  rpc AckMessage(AckRequest) returns (AckResponse);
}

message RegisterRequest {
  string client_type = 1; 
  string client_id = 2;
  repeated string topics = 3; 
}

message RegisterResponse {
  bool success = 1;
  string message = 2;
  string assigned_id = 3;
}

message MessageRequest {
  string id = 1;
  string sender = 2;
  string topic = 3;
  string text = 4;
  int64 timestamp = 5;
}

message MessageResponse {
  bool success = 1;
  string message = 2;
  string message_id = 3;
}

message ReceiveRequest {
  string receiver_id = 1;
}

message Message {
  string id = 1;
  string sender = 2;
  string topic = 3;
  string text = 4;
  int64 timestamp = 5;
}

message AckRequest {
  string message_id = 1;
  string receiver_id = 2;
  string status = 3;
}

message AckResponse {
  bool success = 1;
  string message = 2;
}
